Added the FAQ section.

--- a/src/client/css/controls/_filter.box.less
+++ b/src/client/css/controls/_filter.box.less
@@ -2,11 +2,11 @@
     color: #aaa;
     background: #202020;
     padding: 20px 1em;
-    border: 8px solid #323232;
+    border: 8px solid #202020;
     display: block;
     font-size: 1.4em;
     border-radius: 1em;
-    box-shadow: 0 0 5px #222;
+    //box-shadow: 0 0 5px #222;
     position: relative;
 }
 
