--- a/src/client/css/domain/_site.list.less
+++ b/src/client/css/domain/_site.list.less
@@ -2,7 +2,7 @@
 }
 
 .site-list > .panel-group .panel {
-    border: 8px solid #323232;
+    border: 8px solid #CCA309;
     background-color: #202020;
     border-radius: 1em;
     margin-bottom: 25px;
