--- a/src/client/css/site.less
+++ b/src/client/css/site.less
@@ -12,7 +12,11 @@
 // Core
 @import "./core/_core.less";
 @import "./core/_normalize.less";
-
+     
+// Domain
+@import "./domain/_faq.less";  
+@import "./domain/_site.list.less";  
+         
 // Fonts
 @import "./fonts/_fonts.less";
 
@@ -31,9 +35,5 @@
 
 // Navigation
 @import "./navigation/_nav.less";
-
-// Static
-@import "./static/_site.list.less";  
-
 
 //@import "_slider.less";
