--- a/src/client/css/layout/_section.less
+++ b/src/client/css/layout/_section.less
@@ -19,8 +19,7 @@
 }
 
 .section.section-dark {
-    background: #191919;
-    background: url('/img/dark-mosaic.png');
+    background: #353535;
     -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
@@ -89,6 +88,7 @@
     font-size: 16px;
     color: #333;
     margin-bottom: 15px;
+    line-height: 22px;
 }
 
 .section .section-details p {
