Updates for sage creek daycare phase 5 now that its open

--- a/src/client/css/domain/_site.list.less
+++ b/src/client/css/domain/_site.list.less
@@ -29,7 +29,7 @@
 }
 
 .site-list .panel-heading h4 a .callout {
-    background: orange;
+    background: #00be39;
     color: white;
     padding: 2px 12px;
     border-radius: 3px;
