--- a/src/client/css/headers/_banner.message.less
+++ b/src/client/css/headers/_banner.message.less
@@ -1,7 +1,7 @@
 // BANNER MESSAGE -------------------
 .banner-message {
     margin-top: 59px;
-    background-color: #f1883f;
+    background-color: #00be39;
     text-align: center;
     display: inline-block;
     width: 100%;
