--- a/src/client/css/headers/_site.banner.less
+++ b/src/client/css/headers/_site.banner.less
@@ -61,12 +61,12 @@
     -moz-transition: all .3s ease;
     -o-transition: all .3s ease;
     -webkit-transition: all .3s ease;
-    transition: all .3s ease;
+    transition: all .3s ease; 
 }
 
 @media (max-width: 767px) {
     .site-banner h1 {
-        padding-top: 5px;
+        padding-top: 5px; 
         font-size: 50px;
         line-height: 1.1em;
         padding-left: 10%;
@@ -96,7 +96,7 @@
 }
 
 .site-banner p .callout {
-    background: orange;
+    background: #00be39;
     color: white;
     padding: 5px 12px;
     border-radius: 3px;
