--- a/src/client/css/layout/_business.card.less
+++ b/src/client/css/layout/_business.card.less
@@ -77,6 +77,7 @@
         font-size: 14px;
         text-decoration: underline;
         cursor: pointer;
+        color: #605ce6;
     }
 
     .card .footnote {
