--- a/src/client/css/layout/_section.less
+++ b/src/client/css/layout/_section.less
@@ -86,9 +86,9 @@
 
 .section .section-details .details-lead p {
     font-size: 16px;
-    color: #333;
-    margin-bottom: 15px;
-    line-height: 22px;
+    color: #999;
+    margin-bottom: 20px;
+    font-style: italic;
 }
 
 .section .section-details p {
@@ -99,7 +99,7 @@
 }
 
 .section .section-details .details-trail {
-    margin-top:15px;
+    margin-top: 20px;
 }
 
 // SECTION PARAGRAPH ------------
