Updated sage creek logo. Removed Now Open!

--- a/src/client/css/headers/_banner.message.less
+++ b/src/client/css/headers/_banner.message.less
@@ -1,6 +1,5 @@
 // BANNER MESSAGE -------------------
 .banner-message {
-    margin-top: 59px;
     background-color: #00be39;
     text-align: center;
     display: inline-block;
@@ -11,6 +10,10 @@
     color: white;
     font-weight: 600;
 }
+ 
+.banner-message.has-message {
+    margin-top: 59px;
+} 
 
 @media (max-width: 850px) {
     .banner-message {
