--- a/src/client/css/layout/_business.card.less
+++ b/src/client/css/layout/_business.card.less
@@ -2,6 +2,7 @@
     .card {
         display: block;
         color: #363f4d;
+        background: white;
         font-size: 18px;
         line-height: 23px;
         margin-bottom: 26px;
@@ -18,7 +19,6 @@
         .card {
             box-shadow: none;
             border: none;
-            border-top: 1px solid #ccc;
             margin-bottom: 0;
         }
     }
